FIX: align meta vertically in center

--- a/common/common.scss
+++ b/common/common.scss
@@ -213,6 +213,7 @@
 
   .topic-meta {
     grid-area: meta;
+    display: flex;
 
     .inline {
       align-self: center;
